2007-10-17  Richard Jones  <rjones@redhat.com>

	* virt-top/virt_top.ml: Added --script option.
	* virt-top/virt_top.ml: Log domain data to CSV file.
	* virt-top/virt_top.ml: Added --no-csv-cpu, --no-csv-block and
	  --no-csv-net flags.
	* virt-top/*.ml: Much code clean-up and restructuring.
	* *: Added GNU GPL/LGPL copyright messages to all files.

2007-09-27  Richard Jones  <rjones@redhat.com>

	* configure.ac: Changed version to 0.3.2.9.
	* Makefile.in: Re-enable virt-df.
	* virt-df/virt_df*.ml: Mostly finished off the core of virt-df.
	  Ext2/3 support.  No LVM as yet.
	* virt-df/README: Added README file.

2007-09-24  Richard Jones  <rjones@redhat.com>

	* configure.ac: Version 0.3.2.8 for release.
	* virt-top/virt-top.ml, virt-top/virt-top.pod: Support for
	  $HOME/.virt-toprc init file, modelled after top.
	* virt-top/virt_top_utils.ml: Split out string utilities
	  into a separate file.

2007-09-20  Richard Jones  <rjones@redhat.com>

	* virt-top/virt_top.ml: qemu:/// URIs (and others) don't support
	  virConnectGetHostname.  Catch this exception.

	* Makefile.in: Disable virt-df in this release until I have
	  time to fix it properly.
	* Makefile.in: Fix 'check-manifest' rule.  Added 'make release'.
	* MANIFEST: Updated MANIFEST.

2007-09-19  Richard Jones  <rjones@redhat.com>

	* virt-top/virt_top.ml: Ignore transient error from
	  C.num_of_defined_domains when it cannot contact xend; that
	  was causing virt-top to exit when xend was restarted.

2007-09-18  Richard Jones  <rjones@redhat.com>

	* virt-df/virt_df.ml: Handle domains with partition-backed
	  block devices.

	* virt-top/virt_top.ml: Don't fail on older libvirt which would
	  give an error if list_domains or list_defined_domains was called
	  with n = 0.

	* ChangeLog: Start tracking changes.
