@@ -1,10 +1,14 @@
-virt_top_csv.cmo: virt_top.cmo 
+virt_top.cmi: ../libvirt/libvirt.cmi 
+virt_top_utils.cmi: ../libvirt/libvirt.cmi 
+virt_top_csv.cmo: virt_top.cmi 
 virt_top_csv.cmx: virt_top.cmx 
-virt_top_main.cmo: virt_top.cmo ../libvirt/libvirt.cmi 
+virt_top_main.cmo: virt_top.cmi ../libvirt/libvirt.cmi 
 virt_top_main.cmx: virt_top.cmx ../libvirt/libvirt.cmx 
-virt_top.cmo: virt_top_utils.cmo ../libvirt/libvirt_version.cmi \
-    ../libvirt/libvirt.cmi 
+virt_top.cmo: virt_top_utils.cmi ../libvirt/libvirt_version.cmi \
+    ../libvirt/libvirt.cmi virt_top.cmi 
 virt_top.cmx: virt_top_utils.cmx ../libvirt/libvirt_version.cmx \
-    ../libvirt/libvirt.cmx 
-virt_top_xml.cmo: virt_top.cmo ../libvirt/libvirt.cmi 
+    ../libvirt/libvirt.cmx virt_top.cmi 
+virt_top_utils.cmo: ../libvirt/libvirt.cmi virt_top_utils.cmi 
+virt_top_utils.cmx: ../libvirt/libvirt.cmx virt_top_utils.cmi 
+virt_top_xml.cmo: virt_top.cmi ../libvirt/libvirt.cmi 
 virt_top_xml.cmx: virt_top.cmx ../libvirt/libvirt.cmx 
